--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 		</footer>
 		<script src="https://www.fjmessgeraete.ch/59d71404-d59e-11eb-b8bc-0242ac130003/Lucas/flstat.php"></script>
 		<script>
+// .gitignore
 var data;
 let xhr = new XMLHttpRequest();
 xhr.open("GET","/data.json", true);
