--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 		<link rel="icon" href="./favicon.ico">
 		<link rel="stylesheet" href="style.css">
 		<script src="./ressource/lib.js"></script>
-<!--		<script>const statlink = "https://www.fjmessgeraete.ch/59d71404-d59e-11eb-b8bc-0242ac130003/Lucas/";</script> -->
-		<script>const statlink = "http://localhost:8081";</script>
+		<script>const statlink = "https://www.fjmessgeraete.ch/59d71404-d59e-11eb-b8bc-0242ac130003/Lucas/";</script>
+<!--		<script>const statlink = "http://localhost:8081";</script> -->
 		<script src="script.js"></script>
 	</head>
 	<body>
