add last creation

--- a/404.html
+++ b/404.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html class="nojs">
 	<head>
 		<title>Flame Bousteur</title>
@@ -8,6 +9,7 @@
 
 		<link rel="preload" href="/style.css" as="style">
 		<link rel="preload" href="/script.js" as="script">
+		<link rel="preload" href="/treeCore.js" as="script">
 	
 		<meta property="og:title"	content="Flame Bousteur">
 		<meta property="og:type"	content="website">
@@ -16,13 +18,16 @@
 		<meta property="og:description"	content="Flamebousteur's datapacks and creation">
 		<meta name="theme-color" 	content="#ffffff">
 
+		<meta name="404">
+
 		<link rel="icon" href="/favicon.ico">
 		<link rel="stylesheet" href="/style.css">
 
 		<!--
 			<script>const statlink = "https://www.fjmessgeraete.ch/59d71404-d59e-11eb-b8bc-0242ac130003/Lucas/";</script>
 		-->
-		<script src="http://localhost:8080/script.js"></script>
+		<script src="/treeCore.js"></script>
+		<script src="/script.js"></script>
 	</head>
 	<body>
 		<noscript>
@@ -48,14 +53,16 @@
 			</svg>
 		</div>
 		<div id="divpage" style="background-color:white;">loading ...</div>
-		<footer style="margin-top: 10px; visibility: hidden;">
+		<footer style="margin-top: 10px;">
 			<!-- /aboutme -->
-			<div align="center"><a>Flamebousteur</a></div>
+			<div align="center"><a target="_blank" href="https://github.com/flamebousteur">Flamebousteur</a></div>
 			<a target="_blank" href="https://github.com/flamebousteur/flamebousteur.github.io">github</a><br><br>
-			<!-- /privacy -->
-			<a>privacy policy</a><br>
-			<!-- /confidentialite -->
-			<a>politique de confidentialité</a><br>
+			<!-- /privacy
+				<a>privacy policy</a><br>
+			-->
+			<!-- /confidentialite
+				<a>politique de confidentialité</a><br>
+			-->
 		</footer>
 		<!--
 		<script src="https://www.fjmessgeraete.ch/59d71404-d59e-11eb-b8bc-0242ac130003/Lucas/flstat.php"></script>
