--- a/404.html
+++ b/404.html
@@ -18,13 +18,12 @@
 		<meta property="og:description"	content="Flamebousteur's datapacks and creation">
 		<meta name="theme-color" 	content="#ffffff">
 
-		<meta name="404">
-
 		<link rel="icon" href="/favicon.ico">
 		<link rel="stylesheet" href="/style.css">
 
+		<script>const statlink = "https://www.fjmessgeraete.ch/59d71404-d59e-11eb-b8bc-0242ac130003/Lucas/";</script>
 		<!--
-			<script>const statlink = "https://www.fjmessgeraete.ch/59d71404-d59e-11eb-b8bc-0242ac130003/Lucas/";</script>
+			<script>const statlink = "http://localhost:8081/";</script>
 		-->
 		<script src="/treeCore.js"></script>
 		<script src="/script.js"></script>
@@ -65,7 +64,7 @@
 			-->
 		</footer>
 		<!--
-		<script src="https://www.fjmessgeraete.ch/59d71404-d59e-11eb-b8bc-0242ac130003/Lucas/flstat.php"></script>
 		-->
+		<script src="https://www.fjmessgeraete.ch/59d71404-d59e-11eb-b8bc-0242ac130003/Lucas/flstat.php"></script>
 	</body>
 </html>
